--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@font-face {
+    font-family: can;
+    src: url('./can.otf');
+}
+@font-face {
+    font-family: market;
+    src: url('./market.ttf');
+}
 body{
     overflow-x: hidden;
+    
+    background-color: #FCF6EA;
+    font-family: can;
+    letter-spacing: 1px;
+    color: #1C1C19 ; 
+
 }
+
